# shadow-agents-platform

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  REPO_INSTRUCTIONS.md
api/: .env.example  .gitignore  Dockerfile  README.md  app.py  app_factory.py  celery_app.py  gunicorn.conf.py  pyproject.toml
api/configs/: app_config.py
api/controllers/console/app/: __init__.py  app_bp.py
api/controllers/console/auth/: __init__.py  auth_bp.py
api/controllers/console/model_provider/: __init__.py  model_provider_bp.py
api/controllers/console/tenant/: __init__.py  tenant_bp.py
api/core/model_runtime/: __init__.py
api/core/model_runtime/entities/: __init__.py  model_entities.py
api/core/model_runtime/providers/: __init__.py  base_provider.py  openai_provider.py  provider_factory.py  tei_provider.py
api/extensions/: ext_database.py  ext_redis.py  ext_storage.py
api/libs/: errors.py
api/models/: __init__.py  account.py  app.py  model_provider.py  tenant.py
api/repositories/: __init__.py  account_repository.py  app_repository.py  base_repository.py  model_provider_repository.py  tenant_repository.py
api/services/: __init__.py  app_service.py  auth_service.py  exceptions.py  model_provider_service.py  tenant_service.py
api/tests/: conftest.py
api/tests/integration/: test_api_app.py  test_api_auth.py  test_api_model_provider.py  test_api_tenant.py
api/tests/unit/: test_model_entities.py  test_models_account.py  test_models_app.py  test_models_model_provider.py  test_models_tenant.py  test_openai_provider.py  test_provider_factory.py  test_repositories_account.py  test_repositories_app.py  test_repositories_model_provider.py  test_repositories_tenant.py  test_services_app.py  test_services_auth.py  test_services_model_provider.py  test_services_tenant.py  test_tei_provider.py
docker/: .env.example  README.md  docker-compose.yml
docker/nginx/: nginx.conf
docker/postgres/: init.sql
docker/redis/: redis.conf
docs/: model_providers.md
docs/architecture/: 00-README.md  01-system-architecture.md  (+4 more)
web/: .env.example  .gitignore  Dockerfile  README.md  eslint.config.mjs  next.config.js  package.json  tailwind.config.ts  tsconfig.json
(+27 files in other folders)
